# rust_redis_pubsub

./: README.md  docker-compose.yml
redis/: redis.conf
user_service/: Cargo.toml  Dockerfile  README.md
user_service/src/: main.rs  message.rs  redis_publish.rs  redis_subscribe.rs
web_service/: Cargo.toml  Dockerfile  README.md
web_service/src/: main.rs  redis_publish.rs  redis_subscribe.rs
