[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.4"
tokio = { version = "1.21.2", features = ["full"] }
redis = "0.22.1"
uuid = { version = "1.2.1", features = ["v4"] }
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
hyper = { version = "0.14.20", features = ["full"] }
dotenv = "0.15.0"
